--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "nstart" : "nodemon index.js",
+    "nstart": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chess.js": "^0.10.2",
     "express": "^4.16.4",
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0"
